--- a/fullstack-course4-master/fullstack-course4-master/examples/Lecture40/index.html
+++ b/fullstack-course4-master/fullstack-course4-master/examples/Lecture40/index.html
@@ -5,7 +5,7 @@
   </head>
 <body>
   <h1>Lecture 40</h1>
-
+  <button onclick="ShowAlert()">click</button>
   <script src="js/script.js"></script>
   <script>
   console.log(x);
