--- a/fullstack-course4-master/fullstack-course4-master/examples/Lecture09/links-internal.html
+++ b/fullstack-course4-master/fullstack-course4-master/examples/Lecture09/links-internal.html
@@ -8,7 +8,7 @@
   <h1>Internal Links</h1>
   <section>
     We can link to a file in the same directory as this HTML file like this:
-    <a href="same-directory.html" title="same dir link">Linking to a file in the same directory</a>
+    <a href="./same-directory.html" title="same dir link">Linking to a file in the same directory</a>
 
     <a href="same-directory.html" title="same dir link">
       <div> DIV Linking to a file in the same directory</div>
