--- a/FetchExample/GamesWebApp/index.html
+++ b/FetchExample/GamesWebApp/index.html
@@ -11,6 +11,15 @@
     <input id="postbtn" type="button" value="Post">
 
      <div class="container">  </div>
+    <form id="myForm">
+        <label for="name">name</label>
+        <input type="text" name="name" id="form-name">
+        <label for="age">age</label>
+        <input type="text" name="age" id="form-age">
+        <input type="submit" value="submit">
+    </form>
+
     <script src="./script.js"></script>
+
 </body>
 </html>
